# cpp-boilerplate

./: .dockerignore  .gitignore  CMakeLists.txt  requirements.json
.devcontainer/: Dockerfile  devcontainer.json
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt
src/lib/include/lib/: lib.h
test/: CMakeLists.txt  test_main.cpp
